--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html {
@@ -9,34 +10,97 @@ html {
 
 body {
     height: 100vh;
+    width: 100%;
+    max-width: 576px;
     display: flex;
     flex-direction: column;
+    border: 2px solid rgb(2, 2, 82);
+    border-radius: 8px;
+    position: absolute;
+    left: 50%;
+    translate: -50%;
 }
 
 .app {
     flex-grow: 1;
-
-
+    margin: .2rem;
 }
 
-.form {
+select {
+    width: 2.8rem;
+    height: 1.2rem;
+    font-size: .7rem;
+    border-radius: 8px;
+    border: 2px solid black;
+}
+
+section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: .4rem;
 }
 
-.from{
-    margin-bottom: 1rem;
+.countries {
+    display: flex;
+    justify-content: space-evenly;
 }
-.to{
-    margin-bottom: 2rem;;
+
+input {
+    height: 1.2rem;
+    min-width: 400px;
+    font-size: .9rem;
+    margin: .3rem 0;
+    border-radius: 5px;
+    padding-left: .15rem;
 }
 
 button {
+    padding: 12px 24px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    background: linear-gradient(45deg, #000000, #597b82);
+    border: none;
+    border-radius: 8px;
     cursor: pointer;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: .4rem;
+
+    &:hover {
+        background: linear-gradient(#597b82, #000000);
+        transition: all .2s ease-in-out;
+    }
+
+    &:active {
+        color: aqua;
+    }
 }
+
+.output {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: .3rem;
+}
+
+.output span {
+    border: 1px solid gray;
+}
+
+#exRate {
+    background-color: rgb(224, 235, 163);
+    color: rgb(71, 143, 206);
+    border-radius: 5px;
+    padding: .1rem;
+}
+
+#result {
+    background-color: green;
+    color: aliceblue;
+    border-radius: 5px;
+    padding: .1rem;
+}
+
 
 footer,
 header {
